syntax = "proto3";
package LinkSvc;
option go_package = "github.com/iWorld-y/LiveLink/idl/proto/link";

message GetLinkReq{
  int64 group_id = 1;
}
message GetLinkData{
  int64 group_id            = 1;
  repeated GetLinkList list = 2;
}
message GetLinkList{
  int64 user_id = 1;
  string msg    = 2;
}
message GetLinkResp{
  int64 errno   = 1;
  string errmsg = 2;
  string data   = 3;
}